--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Wine Radio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
-    <h1>Слушайте Red Wine Radio</h1>
-    <audio controls>
-        <source src="https://stream.zeno.fm/pcbduafehg0uv" type="audio/mpeg">
-        Ваш браузер не поддерживает воспроизведение аудио.
-    </audio>
+<body class="text-center bg-light">
+    <div class="container">
+        <h1 class="display-4 text-danger">Слушайте Red Wine Radio</h1>
+        <audio controls class="mt-3">
+            <source src="https://stream.zeno.fm/pcbduafehg0uv" type="audio/mpeg">
+            Ваш браузер не поддерживает воспроизведение аудио.
+        </audio>
+    </div>
 </body>
 </html>
