--- a/index.html
+++ b/index.html
@@ -4,12 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Wine Radio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f9;
+            padding: 50px;
+        }
+
+        h1 {
+            font-size: 3em;
+            color: #b22222;
+            margin-bottom: 20px;
+        }
+
+        .audio-player {
+            background-color: #fff;
+            padding: 10px;
+            border-radius: 15px;
+            width: 300px;
+            margin: 0 auto;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        audio {
+            width: 100%;
+            border: none;
+        }
+
+        /* Пример модернизации кнопки через CSS */
+        button {
+            background-color: #b22222;
+            border: none;
+            padding: 10px;
+            color: white;
+            border-radius: 10px;
+            cursor: pointer;
+            font-size: 1.2em;
+            margin-top: 10px;
+        }
+
+        button:hover {
+            background-color: #d03232;
+        }
+    </style>
 </head>
-<body class="text-center bg-light">
-    <div class="container">
-        <h1 class="display-4 text-danger">Слушайте Red Wine Radio</h1>
-        <audio controls class="mt-3">
+<body>
+    <h1>Слушайте Red Wine Radio</h1>
+    <div class="audio-player">
+        <audio controls>
             <source src="https://stream.zeno.fm/pcbduafehg0uv" type="audio/mpeg">
             Ваш браузер не поддерживает воспроизведение аудио.
         </audio>
