--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </style>
 </head>
 <body>
-    <h1>Слушайте Red Wine Radio</h1>
+    <h1>Red Wine Radio</h1>
     <div class="audio-player">
         <audio controls>
             <source src="https://stream.zeno.fm/pcbduafehg0uv" type="audio/mpeg">
