--- a/index.html
+++ b/index.html
@@ -1,61 +1,44 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red Wine Radio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f9;
-            padding: 50px;
-        }
-
-        h1 {
-            font-size: 3em;
-            color: #b22222;
-            margin-bottom: 20px;
-        }
-
-        .audio-player {
-            background-color: #fff;
-            padding: 10px;
-            border-radius: 15px;
-            width: 300px;
-            margin: 0 auto;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        audio {
-            width: 100%;
-            border: none;
-        }
-
-        /* Пример модернизации кнопки через CSS */
-        button {
-            background-color: #b22222;
-            border: none;
-            padding: 10px;
-            color: white;
-            border-radius: 10px;
-            cursor: pointer;
-            font-size: 1.2em;
-            margin-top: 10px;
-        }
-
-        button:hover {
-            background-color: #d03232;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Red Wine Radio: Listen Online</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
-    <h1>Red Wine Radio</h1>
-    <div class="audio-player">
-        <audio controls>
-            <source src="https://stream.zeno.fm/pcbduafehg0uv" type="audio/mpeg">
-            Ваш браузер не поддерживает воспроизведение аудио.
+  <div class="container">
+    <header class="text-center my-4">
+      <h1>Red Wine Radio</h1>
+      <p>Relax and Easy Listening from Georgia</p>
+    </header>
+    
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Now Playing</h2>
+        <audio controls class="w-100">
+          <source src="https://stream.zeno.fm/pcbduafehg0uv" type="audio/mpeg">
+          Your browser does not support the audio element.
         </audio>
+        <div class="mt-3">
+          <strong>Current Track: </strong><span id="currentTrack">Loading...</span>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h2>Rating</h2>
+        <input type="hidden" class="rating" value="4.5" data-filled="fa fa-star" data-empty="fa fa-star-o" />
+        <p><strong>4.5</strong> (27 votes)</p>
+      </div>
     </div>
+    
+    <section class="my-4">
+      <h2>About the Station</h2>
+      <p>Red Wine Radio is a station broadcasting from Georgia in the Relax and Easy Listening genres. Tune in for a relaxing experience.</p>
+    </section>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
