--- a/index.html
+++ b/index.html
@@ -5,37 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Red Wine Radio: Listen Online</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
-  <div class="container">
-    <header class="text-center my-4">
-      <h1>Red Wine Radio</h1>
-      <p>Relax and Easy Listening from Georgia</p>
-    </header>
-    
-    <div class="row">
-      <div class="col-md-6">
-        <h2>Now Playing</h2>
-        <audio controls class="w-100">
-          <source src="https://stream.zeno.fm/pcbduafehg0uv" type="audio/mpeg">
-          Your browser does not support the audio element.
-        </audio>
-        <div class="mt-3">
-          <strong>Current Track: </strong><span id="currentTrack">Loading...</span>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <h2>Rating</h2>
-        <input type="hidden" class="rating" value="4.5" data-filled="fa fa-star" data-empty="fa fa-star-o" />
-        <p><strong>4.5</strong> (27 votes)</p>
-      </div>
-    </div>
-    
-    <section class="my-4">
-      <h2>About the Station</h2>
-      <p>Red Wine Radio is a station broadcasting from Georgia in the Relax and Easy Listening genres. Tune in for a relaxing experience.</p>
-    </section>
+  <div class="container text-center my-5">
+    <h1>Red Wine Radio</h1>
+    <p>Relax and Easy Listening from Georgia</p>
+
+    <!-- Встраиваемый виджет Zeno без ссылки -->
+    <iframe src="https://zeno.fm/player/red-wine-radio" width="575" height="250" frameborder="0" scrolling="no"></iframe>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
