--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
   <div class="container text-center my-5">
     <h1>Red Wine Radio</h1>
-    <p>Relax and Easy Listening from Georgia</p>
+    <p>Relax and Wine</p>
 
-    <!-- Встраиваемый виджет Zeno без ссылки -->
     <iframe src="https://zeno.fm/player/red-wine-radio" width="575" height="250" frameborder="0" scrolling="no"></iframe>
   </div>
 
