--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 <body>
   <div class="container text-center my-5">
     <h1>Red Wine Radio</h1>
-    <p>Relax and Wine</p>
+    <p>Relax and Easy Listening from Georgia</p>
 
+    <!-- Встраиваемый виджет Zeno -->
     <iframe src="https://zeno.fm/player/red-wine-radio" width="575" height="250" frameborder="0" scrolling="no"></iframe>
   </div>
+
+  <!-- Код для кнопки обратной связи через Replain -->
+  <script>
+    window.replainSettings = { id: 'f0a20e49-8b59-4592-bc9c-83b08d4baed3' };
+    (function(u){var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=u;
+    var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
+    })('https://widget.replain.cc/dist/client.js');
+  </script>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
