--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 
     <!-- Стили для страницы -->
     <style>
+        /* Общие стили */
         body {
             font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
+            background-color: #2D0922; /* Фон страницы в цвет логотипа */
+            color: #FFFFFF; /* Белый цвет текста */
             text-align: center;
             padding: 50px;
         }
 
         h1 {
             font-size: 2.5em;
-            color: #b22222;
+            color: #FFFFFF; /* Белый заголовок */
         }
 
         .container {
@@ -31,27 +32,45 @@
         /* Стили для контейнера плеера */
         .player-container {
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 20px;
             margin-top: 30px;
         }
 
         /* Стили для логотипа */
         .player-logo img {
-            width: 100px;
+            width: 200px;
             height: auto;
             border-radius: 10px; /* Скругленные углы */
+            margin-bottom: 20px;
         }
 
-        /* Стили для плеера */
-        .plyr {
-            width: 100%;
-            max-width: 500px;
+        /* Кастомизация плеера Plyr */
+        .plyr--audio .plyr__controls {
+            background-color: #421840; /* Темный фиолетовый цвет кнопок */
         }
 
+        .plyr--audio .plyr__control {
+            color: #FFFFFF; /* Белый цвет кнопок */
+        }
+
+        .plyr--audio .plyr__progress input {
+            color: #8D2E8D; /* Цвет прогресса */
+        }
+
+        .plyr--audio .plyr__volume input {
+            color: #8D2E8D; /* Цвет полосы громкости */
+        }
+
+        .plyr--audio .plyr__control:hover, .plyr--audio .plyr__control:focus {
+            background-color: #8D2E8D; /* Цвет кнопок при наведении */
+        }
+
+        /* Аудиоплеер */
         audio {
             width: 100%;
+            max-width: 500px;
         }
     </style>
 </head>
