--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Wine Radio: Listen Online</title>
 
+    <!-- Подключаем стили Plyr -->
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.8/plyr.css" />
 
+    <!-- Стили для страницы -->
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #2D0922;
-            color: #FFFFFF;
+            background-color: #2D0922; /* Фон страницы в цвет логотипа */
+            color: #FFFFFF; /* Белый цвет текста */
             text-align: center;
             padding: 50px;
         }
 
         h1 {
             font-size: 2.5em;
-            color: #FFFFFF;
+            color: #FFFFFF; /* Белый заголовок */
         }
 
         .container {
@@ -26,6 +28,7 @@
             margin: 0 auto;
         }
 
+        /* Стили для контейнера плеера */
         .player-container {
             display: flex;
             flex-direction: column;
@@ -34,31 +37,43 @@
             margin-top: 30px;
         }
 
-        .track-cover {
+        /* Стили для логотипа */
+        .player-logo img {
             width: 200px;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 10px;
+            height: auto;
+            border-radius: 10px; /* Скругленные углы */
             margin-bottom: 20px;
         }
 
-        .plyr--audio .plyr__controls {
-            background-color: #421840;
-        }
-
-        .plyr--audio .plyr__control {
+        /* Название трека и исполнителя */
+        .track-info {
+            margin-top: 20px;
+            font-size: 1.2em;
             color: #FFFFFF;
         }
 
-        .plyr--audio .plyr__progress input,
+        /* Кастомизация плеера Plyr */
+        .plyr--audio .plyr__controls {
+            background-color: #421840; /* Темный фиолетовый цвет кнопок */
+        }
+
+        .plyr--audio .plyr__control {
+            color: #FFFFFF; /* Белый цвет кнопок */
+        }
+
+        .plyr--audio .plyr__progress input {
+            color: #8D2E8D; /* Цвет прогресса */
+        }
+
         .plyr--audio .plyr__volume input {
-            color: #8D2E8D;
+            color: #8D2E8D; /* Цвет полосы громкости */
         }
 
         .plyr--audio .plyr__control:hover, .plyr--audio .plyr__control:focus {
-            background-color: #8D2E8D;
+            background-color: #8D2E8D; /* Цвет кнопок при наведении */
         }
 
+        /* Аудиоплеер */
         audio {
             width: 100%;
             max-width: 500px;
@@ -70,35 +85,61 @@
         <h1>Red Wine Radio</h1>
         <p>Relax and Easy Listening from Georgia</p>
 
+        <!-- Контейнер для логотипа и плеера -->
         <div class="player-container">
-            <img id="coverImage" class="track-cover" src="https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg" alt="Red Wine Radio Logo">
+            <!-- Логотип -->
+            <div class="player-logo">
+                <img src="https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg" alt="Red Wine Radio Logo">
+            </div>
 
+            <!-- Аудиоплеер Plyr -->
             <audio id="player" controls>
                 <source src="https://stream.zeno.fm/pcbduafehg0uv" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
+
+            <!-- Блок для отображения названия трека и исполнителя -->
+            <div class="track-info">
+                <span id="trackTitle">Loading...</span>
+            </div>
         </div>
     </div>
 
+    <!-- Подключаем JS Plyr -->
     <script src="https://cdn.plyr.io/3.6.8/plyr.polyfilled.js"></script>
+
+    <!-- Инициализация плеера Plyr -->
     <script>
         const player = new Plyr('#player');
 
-        // Пример получения метаданных с сервера вещания
-        fetch('http://yourstream.com:8000/status-json.xsl')
-            .then(response => response.json())
-            .then(data => {
-                // Обработка данных
-                const coverUrl = data.icestats.source.metadata.cover; // Обложка трека
-                if (coverUrl) {
-                    document.getElementById('coverImage').src = coverUrl;
-                } else {
-                    document.getElementById('coverImage').src = 'https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg';
-                }
-            })
-            .catch(error => console.error('Ошибка при получении метаданных:', error));
+        // Пример простого обновления названия трека
+        function updateTrackInfo(title) {
+            const trackTitle = document.getElementById('trackTitle');
+            trackTitle.textContent = title || "Unknown Track";
+        }
+
+        // Эмуляция получения названия трека
+        // В реальной ситуации нужно получать метаданные с сервера
+        function fetchTrackInfo() {
+            // Здесь можно запросить данные с вашего сервера
+            fetch('https://stream.zeno.fm/pcbduafehg0uv/status-json.xsl')
+                .then(response => response.json())
+                .then(data => {
+                    // Предполагается, что метаданные трека приходят в ответе
+                    const trackTitle = data.currenttrack || 'Unknown Track'; // Пример ключа данных
+                    updateTrackInfo(trackTitle);
+                })
+                .catch(error => {
+                    console.error('Error fetching track info:', error);
+                    updateTrackInfo(null);
+                });
+        }
+
+        // Пример периодического обновления информации о треке
+        setInterval(fetchTrackInfo, 5000); // Обновляем каждые 5 секунд
     </script>
 
+    <!-- Telegram скрипт для кнопки обратной связи Replain -->
     <script>
         window.replainSettings = { id: 'f0a20e49-8b59-4592-bc9c-83b08d4baed3' };
         (function(u){
