--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <!-- MediaElement плеер -->
         <audio id="player" controls>
-            <source src="https://stream.zeno.fm/pcbduafehg0uv.m3u" type="audio/mpeg">
+            <source src="https://stream.zeno.fm/pcbduafehg0uv" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
 
