--- a/index.html
+++ b/index.html
@@ -1,110 +1,157 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red Wine Radio</title>
 
-    <!-- Подключаем стили MediaElement.js -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mediaelement@4.2.16/build/mediaelementplayer.min.css" />
+    <title>Red Wine Radio: Listen Online</title>
 
-    <!-- Стили для страницы -->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #2D0922;
-            color: #FFFFFF;
-            text-align: center;
-            padding: 50px;
-        }
-
-        h1 {
-            font-size: 2.5em;
-            color: #FFFFFF;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .player-logo img {
-            width: 200px;
-            height: auto;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-
-        .track-info {
-            margin-top: 20px;
-            font-size: 1.2em;
-            color: #FFFFFF;
-        }
-
-        .mejs-container {
-            max-width: 600px;
-            margin: 0 auto;
-        }
-    </style>
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg" />
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
+    <link rel="stylesheet" href="css/style.css?v2322">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Red Wine Radio</h1>
-        <p>Relax and Easy Listening from Georgia</p>
 
-        <!-- Логотип -->
-        <div class="player-logo">
-            <img src="https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg" alt="Red Wine Radio Logo">
-        </div>
-
-        <!-- MediaElement плеер -->
-        <audio id="player" controls>
-            <source src="https://stream.zeno.fm/pcbduafehg0uv" type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
-
-        <!-- Блок для отображения названия трека и исполнителя -->
-        <div class="track-info">
-            <span id="trackTitle">Loading track info...</span>
+    <div class="cover-site">
+        <div id="bgCover"></div>
+        <div class="bg-mask"></div>
+    </div>
+    <main>
+        <section id="player">
+            <div class="container">
+                <div class="row web-player">
+                    <div class="col-12 col-lg-10">
+                        <div class="row">
+                            <div class="col-12 col-md-5">
+                                <div class="cover-album">
+                                    <div id="currentCoverArt">
+                                        <img src="https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg" alt="Red Wine Radio Logo" class="img-fluid">
+                                    </div>
+                                    <div class="watermark"></div>
+                                </div>
+                            </div>
+                            <div class="col-12 ml-md-auto col-md-6">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="info-current-song">
+                                            <h2 id="currentSong" class="current-song text-uppercase">Loading track info...</h2>
+                                            <h3 id="currentArtist" class="current-artist text-captalize">Loading artist info...</h3>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="row">
+                                            <div class="play-pause col-12 col-md-6 text-center">
+                                                <button class="btn-play" onclick="togglePlay()">
+                                                    <i id="playerButton" class="fa fa-play"></i> 
+                                                    <span id="buttonPlay">PLAY</span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-12 col-md-6 text-center">
+                                                <div class="row volume-control">
+                                                    <div class="volume-icon col-1">
+                                                        <i class="fa fa-volume-up"></i>
+                                                    </div>
+                                                    <div class="volume-slide col-10 text-center">
+                                                        <input type="range" id="volume" step="1" min="0" max="100" value="80">
+                                                    </div>
+                                                    <div class="percentual-volume col-12">
+                                                        Volume <span id="volIndicator">...</span>%
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-12 col-md-6 text-center call-lyrics">
+                                                <a href="#" class="lyrics" style="" data-target="#modalLyrics">LYRICS</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row historic">
+                    <div class="col-12">
+                        <h2>RECENTLY PLAYED</h2>
+                        <div class="row" id="historicSong">
+                            <article class="col-12 col-md-6">
+                                <div class="cover-historic"></div>
+                                <div class="music-info">
+                                    <div class="song">No Song</div>
+                                    <div class="artist">No Artist</div>
+                                </div>
+                            </article>
+                            <article class="col-12 col-md-6">
+                                <div class="cover-historic"></div>
+                                <div class="music-info">
+                                    <div class="song">No Title</div>
+                                    <div class="artist">No Artist</div>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <div class="modal fade" id="modalLyrics" tabindex="-1" role="dialog" aria-labelledby="lyricsSong" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="lyricsSong">Lyrics</h5>
+                    <button type="button" style="color: #fff" class="close" data-dismiss="modal" aria-label="Fechar">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                
+                <div class="modal-body" id="lyric"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
     </div>
 
-    <!-- Подключаем JS MediaElement.js -->
-    <script src="https://cdn.jsdelivr.net/npm/mediaelement@4.2.16/build/mediaelement-and-player.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 
-    <!-- Telegram скрипт для кнопки обратной связи Replain -->
+    <!-- Ваш поток Zeno.fm и функция плеера -->
     <script>
-        window.replainSettings = { id: 'f0a20e49-8b59-4592-bc9c-83b08d4baed3' };
-        (function(u){
-            var s=document.createElement('script');
-            s.type='text/javascript'; s.async=true; s.src=u;
-            var x=document.getElementsByTagName('script')[0];
-            x.parentNode.insertBefore(s,x);
-        })('https://widget.replain.cc/dist/client.js');
-    </script>
+        var streamUrl = 'https://stream.zeno.fm/pcbduafehg0uv.m3u';  // Ваш поток
 
-    <!-- Инициализация MediaElement плеера -->
-    <script>
-        const player = new MediaElementPlayer('player');
+        var audio = new Audio(streamUrl);
+        var isPlaying = false;
 
-        // Функция для обновления информации о треке
-        function fetchTrackInfo() {
-            // Здесь нужно запросить данные с вашего сервера
-            fetch('https://stream.zeno.fm/pcbduafehg0uv/status-json.xsl')
-                .then(response => response.json())
-                .then(data => {
-                    // Предположим, что название трека и исполнитель приходят в JSON формате
-                    const title = data.icestats.source.title || "Unknown Title";
-                    const artist = data.icestats.source.artist || "Unknown Artist";
-                    document.getElementById('trackTitle').textContent = `${artist} - ${title}`;
-                })
-                .catch(error => {
-                    console.error('Ошибка получения метаданных:', error);
-                });
+        function togglePlay() {
+            if (isPlaying) {
+                audio.pause();
+                document.getElementById('playerButton').classList.remove('fa-pause');
+                document.getElementById('playerButton').classList.add('fa-play');
+                document.getElementById('buttonPlay').innerText = 'PLAY';
+            } else {
+                audio.play();
+                document.getElementById('playerButton').classList.remove('fa-play');
+                document.getElementById('playerButton').classList.add('fa-pause');
+                document.getElementById('buttonPlay').innerText = 'PAUSE';
+            }
+            isPlaying = !isPlaying;
         }
 
-        // Периодическое обновление информации о треке
-        setInterval(fetchTrackInfo, 10000); // Обновляем каждые 10 секунд
+        // Обновление громкости
+        document.getElementById('volume').addEventListener('input', function () {
+            audio.volume = this.value / 100;
+            document.getElementById('volIndicator').innerText = this.value;
+        });
     </script>
+
 </body>
+
 </html>
