--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <!-- Ваш поток Zeno.fm и функция плеера -->
     <script>
-        var streamUrl = 'https://stream.zeno.fm/pcbduafehg0uv';  // Ваш поток
+        var streamUrl = 'https://stream.zeno.fm/pcbduafehg0uv.pls';  // Ваш поток
 
         var audio = new Audio(streamUrl);
         var isPlaying = false;
