--- a/index.html
+++ b/index.html
@@ -1,157 +1,32 @@
 <!DOCTYPE html>
-<html lang="en-US">
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Red Wine Radio: Listen Online</title>
-
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg" />
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <link rel="stylesheet" href="css/style.css?v2322">
+    <title>Red Wine Radio</title>
 </head>
-
 <body>
 
-    <div class="cover-site">
-        <div id="bgCover"></div>
-        <div class="bg-mask"></div>
-    </div>
-    <main>
-        <section id="player">
-            <div class="container">
-                <div class="row web-player">
-                    <div class="col-12 col-lg-10">
-                        <div class="row">
-                            <div class="col-12 col-md-5">
-                                <div class="cover-album">
-                                    <div id="currentCoverArt">
-                                        <img src="https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg" alt="Red Wine Radio Logo" class="img-fluid">
-                                    </div>
-                                    <div class="watermark"></div>
-                                </div>
-                            </div>
-                            <div class="col-12 ml-md-auto col-md-6">
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="info-current-song">
-                                            <h2 id="currentSong" class="current-song text-uppercase">Loading track info...</h2>
-                                            <h3 id="currentArtist" class="current-artist text-captalize">Loading artist info...</h3>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="row">
-                                            <div class="play-pause col-12 col-md-6 text-center">
-                                                <button class="btn-play" onclick="togglePlay()">
-                                                    <i id="playerButton" class="fa fa-play"></i> 
-                                                    <span id="buttonPlay">PLAY</span>
-                                                </button>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-12 col-md-6 text-center">
-                                                <div class="row volume-control">
-                                                    <div class="volume-icon col-1">
-                                                        <i class="fa fa-volume-up"></i>
-                                                    </div>
-                                                    <div class="volume-slide col-10 text-center">
-                                                        <input type="range" id="volume" step="1" min="0" max="100" value="80">
-                                                    </div>
-                                                    <div class="percentual-volume col-12">
-                                                        Volume <span id="volIndicator">...</span>%
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-12 col-md-6 text-center call-lyrics">
-                                                <a href="#" class="lyrics" style="" data-target="#modalLyrics">LYRICS</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row historic">
-                    <div class="col-12">
-                        <h2>RECENTLY PLAYED</h2>
-                        <div class="row" id="historicSong">
-                            <article class="col-12 col-md-6">
-                                <div class="cover-historic"></div>
-                                <div class="music-info">
-                                    <div class="song">No Song</div>
-                                    <div class="artist">No Artist</div>
-                                </div>
-                            </article>
-                            <article class="col-12 col-md-6">
-                                <div class="cover-historic"></div>
-                                <div class="music-info">
-                                    <div class="song">No Title</div>
-                                    <div class="artist">No Artist</div>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-    <div class="modal fade" id="modalLyrics" tabindex="-1" role="dialog" aria-labelledby="lyricsSong" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="lyricsSong">Lyrics</h5>
-                    <button type="button" style="color: #fff" class="close" data-dismiss="modal" aria-label="Fechar">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                
-                <div class="modal-body" id="lyric"></div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- Контейнер для плеера -->
+    <div id="p1"></div>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
-
-    <!-- Ваш поток Zeno.fm и функция плеера -->
+    <!-- Подключение скрипта плеера -->
+    <script src="https://radiowink.com/dist/freeV3.js"></script>
     <script>
-        var streamUrl = 'https://stream.zeno.fm/pcbduafehg0uv.pls';  // Ваш поток
-
-        var audio = new Audio(streamUrl);
-        var isPlaying = false;
-
-        function togglePlay() {
-            if (isPlaying) {
-                audio.pause();
-                document.getElementById('playerButton').classList.remove('fa-pause');
-                document.getElementById('playerButton').classList.add('fa-play');
-                document.getElementById('buttonPlay').innerText = 'PLAY';
-            } else {
-                audio.play();
-                document.getElementById('playerButton').classList.remove('fa-play');
-                document.getElementById('playerButton').classList.add('fa-pause');
-                document.getElementById('buttonPlay').innerText = 'PAUSE';
-            }
-            isPlaying = !isPlaying;
-        }
-
-        // Обновление громкости
-        document.getElementById('volume').addEventListener('input', function () {
-            audio.volume = this.value / 100;
-            document.getElementById('volIndicator').innerText = this.value;
+        var p1 = new freeYess({
+            target: '#p1',
+            url: 'https://stream.zeno.fm/pcbduafehg0uv',
+            platform: 'ic',
+            mountPoint: 'stream',
+            logo: 'https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg',
+            artistc: 'BDC0F8',
+            songtitlec: 'FFFFFF',
+            buttonc: 'FFFFFF',
+            bg: 'C91EB5',
+            artwork: '1',
+            autoplay: 'false',
         });
     </script>
 
 </body>
-
 </html>
