--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script>
         var p1 = new freeYess({
             target: '#p1',
-            url: 'https://stream.zeno.fm/pcbduafehg0uv',
+            url: 'curl -v 'https://stream-168.zeno.fm/pcbduafehg0uv?zt=eyJhbGciOiJIUzI1NiJ9.eyJzdHJlYW0iOiJwY2JkdWFmZWhnMHV2IiwiaG9zdCI6InN0cmVhbS0xNjguemVuby5mbSIsInJ0dGwiOjUsImp0aSI6IjJwU0tyVE1YUVoyX3J3X0ZtTTVOaUEiLCJpYXQiOjE3MjczMzQyOTYsImV4cCI6MTcyNzMzNDM1Nn0.cpqJmoCffODx6aAQ25zUp0YvpeKub9ZXnLAA1GjmObA',
             platform: 'ic',
             mountPoint: 'stream',
             logo: 'https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg',
