--- a/index.html
+++ b/index.html
@@ -7,26 +7,14 @@
 </head>
 <body>
 
-    <!-- Контейнер для плеера -->
-    <div id="p1"></div>
-
     <!-- Подключение скрипта плеера -->
-    <script src="https://radiowink.com/dist/freeV3.js"></script>
-    <script>
-        var p1 = new freeYess({
-            target: '#p1',
-            url: 'curl -v 'https://stream-168.zeno.fm/pcbduafehg0uv?zt=eyJhbGciOiJIUzI1NiJ9.eyJzdHJlYW0iOiJwY2JkdWFmZWhnMHV2IiwiaG9zdCI6InN0cmVhbS0xNjguemVuby5mbSIsInJ0dGwiOjUsImp0aSI6IjJwU0tyVE1YUVoyX3J3X0ZtTTVOaUEiLCJpYXQiOjE3MjczMzQyOTYsImV4cCI6MTcyNzMzNDM1Nn0.cpqJmoCffODx6aAQ25zUp0YvpeKub9ZXnLAA1GjmObA',
-            platform: 'ic',
-            mountPoint: 'stream',
-            logo: 'https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg',
-            artistc: 'BDC0F8',
-            songtitlec: 'FFFFFF',
-            buttonc: 'FFFFFF',
-            bg: 'C91EB5',
-            artwork: '1',
-            autoplay: 'false',
-        });
-    </script>
+    
+    <!-- HTML5 Player (streamerr.co) -->
+        <audio controls="true" preload="none">
+            <source src="https://stream.zeno.fm/pcbduafehg0uv:80/live">
+            Your browser does not support the audio element.
+        </audio>
+    <!-- HTML5 Player END -->
 
 </body>
 </html>
