--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 
     <!-- Подключение скрипта плеера -->
     
-    <!-- HTML5 Player (streamerr.co) -->
-        <audio controls="true" preload="none">
-            <source src="https://stream.zeno.fm/pcbduafehg0uv:80/live">
-            Your browser does not support the audio element.
-        </audio>
-    <!-- HTML5 Player END -->
+    <!-- MAGICSTREAMS - START EMBEDDED IFRAME HTML5 PLAYER --> 
+    <iframe width="100%" height="320" src="https://radioplayer.link/iframe/index.php?autoplay=play&name=Red Wine Radio&logo=https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg&bgcolor=212121&textcolor=FFFFFF&v=2&stream=https://stream.zeno.fm/pcbduafehg0uv" frameborder="0" scrolling="no" style="border-radius: 8px;" allow="autoplay;"></iframe> 
+    <!-- MAGICSTREAMS - END EMBEDDED IFRAME HTML5 PLAYER -->
 
 </body>
 </html>
